// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidateVerificationCodeStep /> render() should render the component with the verification code validation 1`] = `
<div>
  <div
    class="headingBold"
  >
    Step 3: 
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter a verification code from your authenticator app or a recovery code
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        data-resizable="false"
        id="input-text-1"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app or recovery code"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<ValidateVerificationCodeStep /> render() should show a different title when used as the first step of an update 1`] = `
<div>
  <div
    class="headingBold"
  >
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter a verification code from your authenticator app or a recovery code
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        data-resizable="false"
        id="input-text-5"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app or recovery code"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
